RESOLVED FIXED239720
[GLIB] Default-handle recently-added ProcessTerminationReason values
https://bugs.webkit.org/show_bug.cgi?id=239720
Summary [GLIB] Default-handle recently-added ProcessTerminationReason values
Claudio Saavedra
Reported 2022-04-25 07:58:21 PDT
[GLIB] Default-handle recently-added ProcessTerminationReason values
Attachments
Patch (1.55 KB, patch)
2022-04-25 08:01 PDT, Claudio Saavedra
pnormand: review+
Claudio Saavedra
Comment 1 2022-04-25 08:01:04 PDT
Claudio Saavedra
Comment 2 2022-04-25 08:37:49 PDT
Radar WebKit Bug Importer
Comment 3 2022-04-25 08:38:13 PDT
Note You need to log in before you can comment on or make changes to this bug.