[GLIB] Default-handle recently-added ProcessTerminationReason values https://bugs.webkit.org/show_bug.cgi?id=239720

Reviewed by Philippe Normand.

* UIProcess/API/glib/WebKitNavigationClient.cpp: Add a couple of
new values for ProcessTerminationReason that were added on r292912
to silent some compile-time warnings.

Canonical link: https://commits.webkit.org/249951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293328 268f45cc-cd09-0410-ab3c-d52691b4dbfc